sample user endpoint added with legacy configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# @TODO: remove username, password and move them to application.properties.template, if they are confidential ;-)
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/vehicle_r
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://localhost:3306/vehicle_t
+spring.datasource.username=ksroot
+spring.datasource.password=root
+#spring.datasource.driver-className=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
